tests/idris2/coverage/coverage004/expected
1/1: Building Cover (Cover.idr)
Error: While processing left hand side of bad. Can't match on Just 0 as it must have a polymorphic type.

Cover:14:6--14:12
 10 |
 11 | bad : a -> Foo a -> Bool
 12 | bad Z IsNat = False
 13 | bad True IsBool = True
 14 | bad (Just 0) _ = False
           ^^^^^^

Main> Main.okay: okay (S _) IsNat
okay False IsBool
Main> Bye for now!
